<resources>
    <string name="today_label">Today</string>
    <string name="week_label">Week</string>
    <string name="reports_label">Reports</string>
    <string name="due_label">Due Date</string>
    <string name="status_label">Status</string>
    <string name="due_hint">Pick a due date</string>
    <string name="todo_label">Pending</string>
    <string name="by_default">Only TODO</string>
    <string name="in_progress_label">In-progress</string>
    <string name="completed_label">Completed</string>
    <string name="all_label">All</string>
    <string name="summary_label">Summary</string>
    <string name="summary_hint">Family lunch on Sunday at noon</string>
    <string name="details_label">Details</string>
    <string name="details_hint">Details, links, references, etc.</string>
    <string name="send_label">Send</string>
    <string name="edit_label">Edit</string>
    <string name="in_progress_action_label">Start Progress</string>
    <string name="complete_label">Complete</string>
    <string name="items_label">&#160; items</string>
    <string name="no_items_message">There are no TODO items</string>
    <string name="new_todo_label">New TODO</string>
    <string name="edit_todo_label">Edit TODO</string>
    <string name="view_todo_label">View TODO</string>

    <string name="required_label">Required</string>


    <string name="app_name">Todo Me</string>
    <string name="action_settings">Settings</string>

    <string name="could_not_save_changes">Couldn\'t save your changes</string>
</resources>
