<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="@dimen/app_base_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_base_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary_label"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary_hint"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@android:color/transparent"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_base_margin"
        android:paddingBottom="@dimen/app_base_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_label"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_hint"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_base_margin"
        android:paddingBottom="@dimen/app_base_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status_label"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_base_margin"
        android:paddingBottom="@dimen/app_base_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details_label"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details_hint"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@android:color/transparent"
            android:textSize="18dp"/>
    </LinearLayout>
</LinearLayout>
