<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="15dp">

    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_base_margin"
        android:paddingBottom="@dimen/app_base_margin"
        android:layout_margin="@dimen/app_base_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Todo Report"
            android:textSize="22dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/todo_label"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/in_progress_label"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/inprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/completed_label"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>